[gd_scene load_steps=23 format=3]

[ext_resource type="Script" path="res://Script/Skill/Learn_skill.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dtpabyqxlt0x5" path="res://Art/Skill/509.png" id="2"]
[ext_resource type="Texture2D" uid="uid://c5w25ljpc4078" path="res://Art/Skill/236.png" id="3"]
[ext_resource type="FontFile" uid="uid://mq0cfa3t1vbr" path="res://Font/8_FZCuYuan-M03S.ttf" id="4"]
[ext_resource type="Texture2D" uid="uid://t8l066v8xryp" path="res://Art/game_pic/679.PNG" id="5"]
[ext_resource type="FontFile" uid="uid://db4gwqvqgggtj" path="res://Font/Aa梦里掏花对月饮_mianfeiziti.com.ttf" id="6"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="7"]

[sub_resource type="StyleBoxEmpty" id="1"]
script = null

[sub_resource type="StyleBoxEmpty" id="2"]
script = null

[sub_resource type="StyleBoxEmpty" id="3"]
script = null

[sub_resource type="StyleBoxEmpty" id="4"]
script = null

[sub_resource type="StyleBoxEmpty" id="5"]
script = null

[sub_resource type="StyleBoxEmpty" id="6"]
script = null

[sub_resource type="StyleBoxEmpty" id="7"]
script = null

[sub_resource type="StyleBoxEmpty" id="8"]
script = null

[sub_resource type="StyleBoxEmpty" id="9"]
script = null

[sub_resource type="StyleBoxEmpty" id="10"]
script = null

[sub_resource type="StyleBoxEmpty" id="11"]
script = null

[sub_resource type="StyleBoxEmpty" id="12"]
script = null

[sub_resource type="StyleBoxEmpty" id="13"]
script = null

[sub_resource type="StyleBoxEmpty" id="14"]
script = null

[sub_resource type="StyleBoxEmpty" id="15"]
script = null

[node name="Learn_Skill" type="Node2D"]
process_mode = 3
show_behind_parent = true
script = ExtResource( "1" )
metadata/_edit_lock_ = true

[node name="fengeceng" type="ColorRect" parent="."]
offset_top = 1.0
offset_right = 939.0
offset_bottom = 588.0
metadata/_edit_lock_ = true

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(470, 296)
texture = ExtResource( "2" )
metadata/_edit_lock_ = true

[node name="lh_pic" type="Sprite2D" parent="bg"]
position = Vector2(274, 259)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="lh_value" type="Label" parent="bg/lh_pic"]
offset_left = 38.0
offset_top = -9.0
offset_right = 192.0
offset_bottom = 29.0
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_outline_size = -5
theme_override_fonts/font = ExtResource( "4" )
theme_override_font_sizes/font_size = 25
text = "9999999"
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="front_bg" type="ColorRect" parent="bg/lh_pic"]
offset_left = -694.0
offset_top = -491.0
offset_right = 149.0
offset_bottom = -37.0
color = Color(0, 0, 0, 0.866667)
metadata/_edit_lock_ = true

[node name="wl_1" type="Sprite2D" parent="bg/lh_pic/front_bg"]
position = Vector2(287, 34)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="Title" type="Label" parent="bg/lh_pic/front_bg"]
layout_mode = 0
offset_left = 358.0
offset_top = 13.0
offset_right = 478.0
offset_bottom = 55.0
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource( "6" )
theme_override_font_sizes/font_size = 30
text = "主动技能"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_lock_ = true

[node name="wl_2" type="Sprite2D" parent="bg/lh_pic/front_bg"]
position = Vector2(533, 36)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="zd_skill" type="Button" parent="bg"]
offset_left = -386.0
offset_top = 261.0
offset_right = -286.0
offset_bottom = 287.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "7" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "1" )
theme_override_styles/hover = SubResource( "2" )
theme_override_styles/pressed = SubResource( "3" )
theme_override_styles/disabled = SubResource( "4" )
theme_override_styles/focus = SubResource( "5" )
text = "主动技能"
metadata/_edit_lock_ = true

[node name="bd_skill" type="Button" parent="bg"]
offset_left = -265.0
offset_top = 261.0
offset_right = -165.0
offset_bottom = 287.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "7" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "6" )
theme_override_styles/hover = SubResource( "7" )
theme_override_styles/pressed = SubResource( "8" )
theme_override_styles/disabled = SubResource( "9" )
theme_override_styles/focus = SubResource( "10" )
text = "被动技能"
metadata/_edit_lock_ = true

[node name="close" type="Button" parent="bg"]
offset_left = 390.0
offset_top = -279.0
offset_right = 444.0
offset_bottom = -259.0
theme_override_colors/font_hover_color = Color(1, 0.466667, 0, 1)
theme_override_fonts/font = ExtResource( "7" )
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource( "11" )
theme_override_styles/hover = SubResource( "12" )
theme_override_styles/pressed = SubResource( "13" )
theme_override_styles/disabled = SubResource( "14" )
theme_override_styles/focus = SubResource( "15" )
text = "返 回"
metadata/_edit_lock_ = true

[connection signal="pressed" from="bg/zd_skill" to="." method="_on_zd_skill_pressed" flags=18]
[connection signal="pressed" from="bg/bd_skill" to="." method="_on_bd_skill_pressed" flags=18]
[connection signal="pressed" from="bg/close" to="." method="_on_close_pressed" flags=18]
